--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             border-radius: 5px; /* Bordes redondeados */
             margin: 10px 0; /* Espacio arriba y abajo */
         }
+        .example-title {
+            text-align: center; /* Centrar el texto */
+            font-size: 28px; /* Tamaño de letra para el título de ejemplo */
+            font-weight: bold; /* Hacer la letra más gruesa */
+            color: #003366; /* Color azul marino claro */
+            margin-bottom: 20px; /* Espacio debajo del título */
+        }
         img {
             width: 100%; /* Ancho de la imagen */
             max-width: 700px; /* Ancho máximo de la imagen */
@@ -82,6 +89,8 @@
         <div class="pathway">
             <img src="adm/proceso.png" alt="Diagrama del Proceso de Gestión"> <!-- Imagen del proceso -->
         </div>
+
+        <div class="example-title">EJEMPLO</div> <!-- Encabezado del plano cartesiano -->
 
         <div class="grid">
             <div class="box">
