--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@
             margin-bottom: 10px; /* Espacio debajo del título */
             color: #333; /* Color del texto */
         }
+        .example-title {
+            text-align: center; /* Centrar el texto */
+            font-size: 28px; /* Tamaño de letra para el título de ejemplo */
+            font-weight: bold; /* Hacer la letra más gruesa */
+            color: #003366; /* Color azul marino claro */
+            margin-bottom: 20px; /* Espacio debajo del título */
+        }
+        .pathway {
+            text-align: center; /* Centrar el camino */
+            margin: 20px 0; /* Espacio arriba y abajo */
+        }
+        img {
+            width: 100%; /* Ancho de la imagen */
+            max-width: 700px; /* Ancho máximo de la imagen */
+            height: auto; /* Altura automática para mantener la proporción */
+            border-radius: 8px; /* Bordes redondeados */
+            transition: transform 0.3s; /* Transición suave para el efecto de agrandamiento */
+        }
+        img:hover {
+            transform: scale(1.05); /* Agrandar la imagen al pasar el cursor */
+        }
     </style>
 </head>
 <body>
