--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Courier New', Courier, monospace; /* Fuente general del cuerpo */
             margin: 0;
             padding: 20px;
-            background: linear-gradient(135deg, #f0f4c3, #c5e1a5); /* Fondo en degradado suave */
+            background: url('adm/fondo.jpg') repeat; /* Fondo de la página con imagen repetida */
             color: #333;
         }
         .title {
@@ -17,7 +17,7 @@
             font-size: 48px; /* Tamaño de letra grande */
             font-weight: bold; /* Hacer la letra más gruesa */
             color: white; /* Color de letra blanco */
-            background-color: #87CEEB; /* Fondo azul celeste */
+            background-color: #003366; /* Fondo azul intenso */
             padding: 20px; /* Espaciado alrededor del texto */
             border-radius: 10px; /* Bordes redondeados */
             margin-bottom: 40px; /* Espacio debajo del título */
@@ -27,14 +27,14 @@
             padding: 20px;
             border: 1px solid #4E3B31; /* Borde café */
             border-radius: 8px;
-            background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
+            background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
         }
         .intro-title, .definition-title {
             text-align: center; /* Centrar el texto */
             font-size: 32px; /* Tamaño de letra para el título de introducción */
             font-weight: bold; /* Hacer la letra más gruesa */
             color: white; /* Color de letra blanco */
-            background-color: #FF7F7F; /* Fondo rojo suave */
+            background-color: #007BFF; /* Fondo celeste oscuro */
             padding: 15px; /* Espaciado alrededor del texto */
             border-radius: 10px; /* Bordes redondeados */
             margin-bottom: 20px; /* Espacio debajo del título */
@@ -45,17 +45,17 @@
             margin-bottom: 20px; /* Espacio debajo del texto */
         }
         .grid {
-            display: grid; /* Usar grid para el diseño cartesiano */
-            grid-template-columns: 1fr 1fr; /* Dos columnas */
-            grid-template-rows: 1fr 1fr; /* Dos filas */
+            display: flex; /* Usar flexbox para alinear los cuadros uno al lado del otro */
+            justify-content: space-between; /* Espacio entre los cuadros */
             gap: 20px; /* Espacio entre los cuadros */
         }
         .box {
-            background: #f9f9f9; /* Fondo de los cuadros */
-            border: 1px solid #ddd; /* Borde de los cuadros */
+            background: rgba(255, 255, 255, 0.5); /* Fondo blanco semi-transparente */
+            border: 2px solid #ddd; /* Borde de los cuadros más grueso */
             border-radius: 8px; /* Bordes redondeados */
             padding: 15px; /* Espaciado interno */
             text-align: left; /* Alinear texto a la izquierda */
+            flex: 1; /* Hacer que los cuadros ocupen el mismo espacio */
         }
         .nature-title {
             color: blue; /* Color azul para el subtítulo de naturaleza */
@@ -65,18 +65,13 @@
         }
         .sub-title {
             font-weight: bold; /* Negrita para los subtítulos dentro del cuadro */
-            color: #003366; /* Azul marino claro */
-            background-color: #B2E0F9; /* Fondo celeste */
-            padding: 5px; /* Espaciado interno */
-            border-radius: 5px; /* Bordes redondeados */
-            margin: 10px 0; /* Espacio arriba y abajo */
         }
         .theories-title {
             text-align: center; /* Centrar el texto */
             font-size: 32px; /* Tamaño de letra para el título de teorías */
             font-weight: bold; /* Hacer la letra más gruesa */
             color: white; /* Color de letra blanco */
-            background-color: #FF7F7F; /* Fondo rojo suave */
+            background-color: #007BFF; /* Fondo celeste oscuro */
             padding: 15px; /* Espaciado alrededor del texto */
             border-radius: 10px; /* Bordes redondeados */
             margin-bottom: 20px; /* Espacio debajo del título */
