--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         background: #f9f9f9; /* Fondo de las cartas */
         border: 1px solid #ddd; /* Borde de las cartas */
         border-radius: 8px; /* Bordes redondeados */
-        width: 30%; /* Ancho de la tarjeta */
+        width: 100%; /* Ancho de la tarjeta */
+        height: 150px; /* Altura de la tarjeta */
         margin: 10px; /* Espacio entre tarjetas */
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
         transition: transform 0.3s; /* Transición suave para el efecto de agrandamiento */
