--- a/index.html
+++ b/index.html
@@ -1,3 +1,79 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cuestionario Interactivo</title>
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace; /* Fuente general del cuerpo */
+            margin: 0;
+            padding: 20px;
+            background: url('adm/fondo.jpg') repeat; /* Fondo de la página con imagen repetida */
+            color: #333;
+        }
+        .section {
+            margin-bottom: 40px; /* Espacio debajo de cada sección */
+            padding: 20px;
+            border: 1px solid #4E3B31; /* Borde café */
+            border-radius: 8px;
+            background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+        }
+        .intro-title {
+            text-align: center; /* Centrar el texto */
+            font-size: 32px; /* Tamaño de letra para el título de introducción */
+            font-weight: bold; /* Hacer la letra más gruesa */
+            color: white; /* Color de letra blanco */
+            background-color: #007BFF; /* Fondo celeste oscuro */
+            padding: 15px; /* Espaciado alrededor del texto */
+            border-radius: 10px; /* Bordes redondeados */
+            margin-bottom: 20px; /* Espacio debajo del título */
+        }
+        .card-group {
+            display: flex; /* Usar flexbox para las tarjetas en cada grupo */
+            flex-wrap: wrap; /* Permitir que las tarjetas se ajusten en varias filas */
+            justify-content: space-around; /* Espacio entre tarjetas */
+            width: 100%; /* Ancho del grupo de tarjetas */
+            margin: 10px 0; /* Espacio entre grupos */
+        }
+        .card {
+            background: #f9f9f9; /* Fondo de las cartas */
+            border: 1px solid #ddd; /* Borde de las cartas */
+            border-radius: 8px; /* Bordes redondeados */
+            width: 200px; /* Ancho de la tarjeta */
+            height: 150px; /* Altura de la tarjeta */
+            margin: 10px; /* Espacio entre tarjetas */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+            transition: transform 0.3s; /* Transición suave para el efecto de agrandamiento */
+            cursor: pointer; /* Cambiar cursor al pasar sobre la tarjeta */
+            position: relative; /* Para el efecto de volteo */
+            overflow: hidden; /* Para ocultar el contenido que sobresale */
+        }
+        .card-content {
+            padding: 15px; /* Espaciado interno */
+            text-align: left; /* Alinear texto a la izquierda */
+            backface-visibility: hidden; /* Ocultar el reverso cuando no está volteado */
+            position: absolute; /* Para superponer la respuesta */
+            top: 0; /* Alinear al inicio */
+            left: 0; /* Alinear al inicio */
+            right: 0; /* Alinear al inicio */
+            bottom: 0; /* Alinear al inicio */
+            border-radius: 8px; /* Bordes redondeados */
+        }
+        .card-content.back {
+            background: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
+            transform: rotateY(180deg); /* Voltear el reverso */
+        }
+        .card.flipped .front {
+            display: none; /* Ocultar la parte de pregunta cuando está volteada */
+        }
+        .card.flipped .back {
+            display: block; /* Mostrar la parte de respuesta cuando está volteada */
+        }
+    </style>
+</head>
+<body>
+
 <div class="section">
     <div class="intro-title">CUESTIONARIO INTERACTIVO</div>
     <p class="intro-text">Haz clic en las tarjetas para revelar las respuestas.</p>
@@ -38,50 +114,6 @@
     </div>
 </div>
 
-<style>
-    .card-group {
-        display: flex; /* Usar flexbox para las tarjetas en cada grupo */
-        flex-wrap: wrap; /* Permitir que las tarjetas se ajusten en varias filas */
-        justify-content: space-between; /* Espacio entre tarjetas */
-        width: 100%; /* Ancho del grupo de tarjetas */
-        margin: 10px 0; /* Espacio entre grupos */
-    }
-    .card {
-        background: #f9f9f9; /* Fondo de las cartas */
-        border: 1px solid #ddd; /* Borde de las cartas */
-        border-radius: 8px; /* Bordes redondeados */
-        width: 100%; /* Ancho de la tarjeta */
-        height: 150px; /* Altura de la tarjeta */
-        margin: 10px; /* Espacio entre tarjetas */
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-        transition: transform 0.3s; /* Transición suave para el efecto de agrandamiento */
-        cursor: pointer; /* Cambiar cursor al pasar sobre la tarjeta */
-        position: relative; /* Para el efecto de volteo */
-        overflow: hidden; /* Para ocultar el contenido que sobresale */
-    }
-    .card-content {
-        padding: 15px; /* Espaciado interno */
-        text-align: left; /* Alinear texto a la izquierda */
-        backface-visibility: hidden; /* Ocultar el reverso cuando no está volteado */
-        position: absolute; /* Para superponer la respuesta */
-        top: 0; /* Alinear al inicio */
-        left: 0; /* Alinear al inicio */
-        right: 0; /* Alinear al inicio */
-        bottom: 0; /* Alinear al inicio */
-        border-radius: 8px; /* Bordes redondeados */
-    }
-    .card-content.back {
-        background: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
-        transform: rotateY(180deg); /* Voltear el reverso */
-    }
-    .card.flipped .front {
-        display: none; /* Ocultar la parte de pregunta cuando está volteada */
-    }
-    .card.flipped .back {
-        display: block; /* Mostrar la parte de respuesta cuando está volteada */
-    }
-</style>
-
 <script>
     // Este script permite el efecto de volteo de las tarjetas
     document.querySelectorAll('.card').forEach(card => {
@@ -90,3 +122,6 @@
         });
     });
 </script>
+
+</body>
+</html>
